popis implementace hlavniho stavoveho automatu pro kontrolu od Radka

--- a/text/jtag_ap.tex
+++ b/text/jtag_ap.tex
@@ -1,5 +1,5 @@
 %\chapter{Návrh a implementace rozšiřujícího modulu pro přístup na systémovou sběrnici pomocí JTAG protokolu}	\label{jtag_ap}
-\chapter{Popis modulu pro přístup na systémovou sběrnici pomocí JTAG protokolu}	\label{jtag_ap}
+\chapter{Popis modulu pro přístup na systémovou sběrnici pomocí \acs{JTAG} protokolu}	\label{jtag_ap}
 Pro přístup na systémovou sběrnici procesoru jsou navrženy dvě varianty komunikačního protokolu přenášeného pomocí JTAG rozhraní. Obě varianty protokolu jsou popsány pro čtyřvodičovou variantu \acs{JTAG} komunikace mezi debuggerem (aplikační prostředí pro testování obvodů) a \acs{JTAG} systémem (navržený systém pro testování). Navržený protokol bude sloužit jako vedlejší možnost přístupu na systémovou sběrnici, která je časově optimálnější.
 
 \section{Návrh optimalizovaného protokolu pro přístup na systémovou sběrnici}	\label{sec:protokoly}
@@ -128,35 +128,36 @@ První varianta je inspirována řešením původního testovacího systému, kd
 
 Druhá varianta protokolu je nejvíce časově optimální, protože využívá signalizace probíhajícího přístupu na systémovou sběrnici prostřednictvím \texttt{\acs{TDO}}. Díky této vlastnosti také není třeba procházet řídicím stavovým automatem během komunikace a po zpracování požadavku na systémové sběrnici nevzniká výrazná prodleva před započetím další komunikace.
 
-\section{Implementace}
+\section{Implementace modulu pro přístup na systémovou sběrnici pomocí \acs{JTAG} protokolu}
 Pro komunikaci s čipem pomocí navrženého optimalizovaného protokolu byla přidána nová \acs{JTAG} instrukce do testovacího systému \acs{RISC-V}. Zápisem instrukce \texttt{0x02} je aktivován modul pro přístup na systémovou sběrnici pomocí navrženého protokolu. Navržené řešení bylo popsáno v jazyce \acs{VHDL} a funkcionalita byla ověřena v simulátoru \texttt{Xcelium}, stejně jako modul pro dvouvodičový \acs{JTAG} protokol popsaný v podkapitole \ref{sec:cJTAG_adapter}.
 
 \subsection{Základní popis návrhu}	\label{subsec:jtag_ap_impl}
 Modul pro komunikaci pomocí navrženého protokolu je rozdělen na dvě části, z důvodu přechodu mezi hodinovými doménami \acs{JTAG} rozhraní (\texttt{\acs{TCK}}) a systémové sběrnice procesoru (\texttt{CLK}).
 
-Část obvodu pro zpracování optimalizovaného protokolu je realizována implementací stavového automatu. Tento stavový automat je rozdělený na tři části, pro zpracování varianty protokolu \textbf{Busy-wait}, \textbf{Dynamic-wait} a také pro změnu varianty. Všechny tyto části stavového automatu mají společné stavy \textit{S\_IDLE} a \textit{S\_OP} (operace). Přechody ze stavu \textit{S\_OP} rozdělují stavový automat podle vybrané varianty protokolu a také podle přijaté hodnoty \textit{op} definované tabulkou \ref{tab:op_vals}. Rozdělení stavového automatu v rámci stavu \textit{S\_OP} vyplývá z potřeby vyhodnocení hodnoty \textit{op} = 7 uvozující změnu varianty protokolu. Přechod mezi stavy \textit{S\_IDLE} a \textit{S\_OP} nastane vždy při přechodu řídicího stavového automatu do stavu \textit{Shift-DR} a zároveň za předpokladu, že je instrukce nastavena na hodnotu \texttt{0x02}.
+Část obvodu pro zpracování optimalizovaného protokolu je realizována implementací stavového automatu, který je taktován na nástupnou hranu \texttt{\acs{TCK}}. Tento stavový automat je rozdělený na tři části, pro zpracování varianty protokolu \textbf{Busy-wait}, \textbf{Dynamic-wait} a také pro změnu varianty. Všechny tyto části stavového automatu mají společné stavy \textit{S\_IDLE} a \textit{S\_OP} (operace). Přechody ze stavu \textit{S\_OP} rozdělují stavový automat podle vybrané varianty protokolu a také podle přijaté hodnoty \textit{op} definované tabulkou \ref{tab:op_vals}. Rozdělení stavového automatu v rámci stavu \textit{S\_OP} vyplývá z potřeby vyhodnocení hodnoty \textit{op} = 7 uvozující změnu varianty protokolu. Přechod mezi stavy \textit{S\_IDLE} a \textit{S\_OP} nastane vždy při přechodu řídicího stavového automatu do stavu \textit{Shift-DR} a zároveň za předpokladu, že je instrukce nastavena na hodnotu \texttt{0x02}.
 
 Tento způsob implementace stavového automatu byl vybrán jako kompromis mezi variantou samostatných stavových automatů pro jednotlivé varianty protokolu a mezi jedním sdíleným stavovým automatem pro obě varianty. Pokud by bylo zvoleno řešení se samostatnými stavovými automaty, byly by stavy ve kterých nejsou přenášena data zbytečně duplikovány (například stav \textit{S\_IDLE}). Toto řešení by také zbytečně navyšovalo počet klopných obvodů potřebný pro definování stavů. V případě sloučení všech stavů pro oba protokoly, by byla kombinační logika stavového automatu výrazně složitější a pravděpodobně i celkově obsáhlejší. Toto řešení by mělo za následek výrazně náročnější implementaci případných změn či vylepšení (například přidání dalšího protokolu). 
 
 \subsection{Varianta protokolu Busy-wait - stavový automat} \label{subsec:busy-wait-fsm}
 Princip fungování části stavového automatu pro komunikaci pomocí \textbf{Busy-wait} varianty protokolu je znázorněn stavovým diagramem na obrázku \ref{fig:busy_wait_fsm}. Pokud je zvolena varianta protokolu \textbf{Busy-wait}, přechází automat ze stavu \textit{S\_OP} na základě přijaté hodnoty \textit{op} do stavu \textit{S\_ADDR\_SHIFT} nebo \textit{S\_DATA\_SHIFT}.
 
-V případě zápisu na systémovou sběrnici stavový automat obsluhuje příjem adresy a dat podle časového průběhu na obrázku \ref{fig:busy_w}. Jednotlivým částem průběhu odpovídají jednotlivé stavy, mezi kterými automat přechází na základě jejich délky, která je stanovena hodnotou čítače \texttt{shift\_cnt}. Tento čítač je při každé změně stavu resetován. Ze stavu \textit{S\_OP} přechází automat do stavu \textit{S\_ADDR\_SHIFT}, jakmile je přijata hodnota \textit{op}, která je přidružena přenosu adresy. Po přijetí adresy přechází automat do stavu \textit{S\_DATA\_SHIFT} pro příjem zapisovaných dat, a to za předpokladu, že hodnota \textit{op} odpovídá zápisu (\texttt{we} = 1). Po přijetí zapisovaných dat dané délky, která byla určena na základě hodnoty \textit{op} podle tabulky \ref{tab:op_vals}, přechází automat do stavu \textit{S\_REQUEST}. Ve stavu \textit{S\_REQUEST} automat setrvá vždy pouze jeden hodinový takt a je vystaven požadavek na systémovou sběrnici, pokud je předchozí požadavek dokončen (\texttt{rq\_start} = 1).
+V případě zápisu na systémovou sběrnici stavový automat obsluhuje příjem adresy a dat podle časového průběhu na obrázku \ref{fig:busy_w}. Jednotlivým částem průběhu odpovídají jednotlivé stavy, mezi kterými automat přechází na základě jejich délky, která je stanovena hodnotou čítače \texttt{shift\_cnt}. Tento čítač je při každé změně stavu resetován. Ze stavu \textit{S\_OP} přechází automat do stavu \textit{S\_ADDR\_SHIFT}, jakmile je přijata hodnota \textit{op}, která je přidružena přenosu adresy. Po přijetí adresy přechází automat do stavu \textit{S\_DATA\_SHIFT} pro příjem zapisovaných dat, a to za předpokladu, že hodnota \textit{op} odpovídá zápisu (\texttt{we} = 1). Po přijetí zapisovaných dat dané délky, která byla určena na základě hodnoty \textit{op} podle tabulky \ref{tab:op_vals}, přechází automat do stavu \textit{S\_REQUEST}. Ve stavu \textit{S\_REQUEST} automat setrvá vždy pouze jeden hodinový takt \texttt{\acs{TCK}} je vystaven požadavek na systémovou sběrnici, pokud je předchozí požadavek dokončen (\texttt{rq\_start} = 1).
 
-Průchody stavovým automatem pro čtení ze systémové sběrnice odpovídají časovému průběhu na obrázku \ref{fig:busy_r}. Při prvním průchodu je přijata adresa registru, ze kterého je požadováno data vyčíst. Tato fáze je obdobná, jako v případě zápisu s rozdílem, že ze stavu \textit{S\_ADDR\_SHIFT} se přechází přímo do stavu \textit{S\_REQUEST} (\texttt{we} = 0), kde je vyvolán požadavek na vyčtení dat z adresy (\texttt{rq\_start} = 1). Při druhém průchodu je očekávána hodnota \textit{op} = 6, čímž je podmíněn přechod ze stavu \textit{S\_OP} přímo do stavu \textit{S\_DATA\_SHIFT}, kde jsou vyčtená data odeslána zpět prostřednictvím \texttt{\acs{TDO}} pinu. Stavem \textit{S\_REQUEST}\textit{S\_REQUEST} nejsou totožné  se v tomto průchodu pouze prochází do stavu \textit{S\_IDLE}, a požadavek na systémovou sběrnici není iniciován.
+Průchody stavovým automatem pro čtení ze systémové sběrnice odpovídají časovému průběhu na obrázku \ref{fig:busy_r}. Při prvním průchodu je přijata adresa registru, ze kterého je požadováno data vyčíst. Tato fáze je obdobná, jako v případě zápisu s rozdílem, že ze stavu \textit{S\_ADDR\_SHIFT} se přechází přímo do stavu \textit{S\_REQUEST} (\texttt{we} = 0), kde je vyvolán požadavek na vyčtení dat z adresy (\texttt{rq\_start} = 1). Při druhém průchodu je očekávána hodnota \textit{op} = 6, čímž je podmíněn přechod ze stavu \textit{S\_OP} přímo do stavu \textit{S\_DATA\_SHIFT}, kde jsou vyčtená data odeslána zpět prostřednictvím \texttt{\acs{TDO}} pinu. Stavem \textit{S\_REQUEST} se po odeslání dat pouze prochází do stavu \textit{S\_IDLE}, a požadavek na systémovou sběrnici není iniciován.
 
 \begin{figure}[H]
   \begin{center}
-    \includegraphics[scale=0.2]{obrazky/busy_fsm_simple.pdf}
+    \includegraphics[scale=0.22]{obrazky/busy_fsm_simple.pdf}
   \end{center}
-  \caption{Stavový diagram popisující část hlavního stavového automatu pro busy-wait režim}
+  \caption{Stavový diagram části stavového automatu pro busy-wait mód}
 	\label{fig:busy_wait_fsm}
 \end{figure}
+\pagebreak
 
 \subsection{Varianta protokolu Dynamic-wait - stavový automat} \label{subsec:dyn-wait-fsm}
 Stavový diagram pro část stavového automatu realizující komunikaci pomocí \textbf{Dynamic-wait} varianty protokolu je znázorněn na obrázku \ref{fig:dyn_wait_fsm}. Stavy \textit{S\_ADDR\_SHIFT}, \textit{S\_DATA\_SHIFT} a \textit{S\_REQUEST} nejsou stejnými stavy jako v případě obrázku \ref{fig:busy_wait_fsm}, ale jsou stejně pojmenované pro názornost. Oproti komunikaci \textbf{Busy-wait} variantou protokolu automat přechází ze stavu \textit{S\_OP} do stavu \textit{S\_ADDR\_SHIFT} v případě čtení i zápisu.
 
-V případě příjmu hodnoty \textit{op} odpovídající zápisu na systémovou sběrnici (\texttt{we} = 1) přechází stavový automat ze stavu \textit{S\_ADDR\_SHIFT} do stavu \textit{S\_DATA\_SHIFT} po přijetí adresy na základě hodnoty čítače \texttt{shift\_cnt} obdobně jako v případě zápisu v \textbf{Busy-wait} režimu. Komunikace odpovídá časovému průběhu na obrázku \ref{fig:wait_w}. Po příjmu zapisovaných dat přechází automat do stavu \textit{S\_REQUEST}, kdy je spuštěn požadavek zápisu na systémovou sběrnici, který není oproti předchozí variantě protokolu podmíněn hodnotou \textit{status} = 1 (\textit{busy}), protože tato situace z principu tohoto protokolu nenastane. V tomto stavu již začíná z pohledu této varianty protokolu fáze čekání na zpracování požadavku na systémové sběrnici, proto musí být na \texttt{\acs{TDO}} pinu nastavena hodnota log. \texttt{0}. Z tohoto důvodu jsou nastaveny signály \texttt{tdo\_dyn} = 0 a \texttt{tdo\_dyn\_en} = 1 v tomto stavu. Poté automat přechází do stavu \textit{S\_WAIT}, kde setrvá dokud není zápis na systémovou sběrnici dokončen. Jakmile je zápis dokončen přechází automat do stavu \textit{S\_ACK}, kde je nastaven signál \texttt{tdo\_dyn} na hodnotu log. \texttt{1}. S dalším hodinovým taktem přechází automat zpět do stavu \textit{S\_OP} a komunikace může pokračovat nebo ji debugger může ukončit přechodem ze stavu \textit{Shift-DR} řídicího stavového automatu.
+V případě příjmu hodnoty \textit{op} odpovídající zápisu na systémovou sběrnici (\texttt{we} = 1) přechází stavový automat ze stavu \textit{S\_ADDR\_SHIFT} do stavu \textit{S\_DATA\_SHIFT} po přijetí adresy na základě hodnoty čítače \texttt{shift\_cnt} obdobně jako v případě zápisu v \textbf{Busy-wait} režimu. Komunikace odpovídá časovému průběhu na obrázku \ref{fig:wait_w}. Po příjmu zapisovaných dat přechází automat do stavu \textit{S\_REQUEST}, kdy je spuštěn požadavek zápisu na systémovou sběrnici, který není oproti předchozí variantě protokolu podmíněn hodnotou \textit{status} = 1 (\textit{busy}), protože tato situace z principu tohoto protokolu nenastane. V tomto stavu již začíná, z pohledu této varianty protokolu, fáze čekání na zpracování požadavku na systémové sběrnici, proto musí být na \texttt{\acs{TDO}} pinu nastavena hodnota log. \texttt{0}. Z tohoto důvodu jsou nastaveny signály \texttt{tdo\_dyn} = 0 a \texttt{tdo\_dyn\_en} = 1 již v tomto stavu. Poté automat přechází do stavu \textit{S\_WAIT}, kde setrvá dokud není zápis na systémovou sběrnici dokončen. Jakmile je zápis dokončen přechází automat do stavu \textit{S\_ACK}, kde je nastaven signál \texttt{tdo\_dyn} na hodnotu log. \texttt{1}. S dalším hodinovým taktem přechází automat zpět do stavu \textit{S\_OP} a komunikace může pokračovat nebo ji debugger může ukončit přechodem ze stavu \textit{Shift-DR} řídicího stavového automatu.
 
 Pro čtení ze systémové sběrnice je třeba po přijetí adresy čteného registru zadat požadavek na systémovou sběrnici, jak je vidět z časového průběhu na obrázku \ref{fig:wait_r}. Stavový automat tedy přejde ze stavu \textit{S\_ADDR\_SHIFT} do stavu \textit{S\_REQUEST} (\texttt{we} = 0). Poté následuje čekání na provedení operace systémovou sběrnicí ve stavu \textit{S\_WAIT} a následně \textit{S\_ACK} stejně jako v případě zápisu. Jakmile je operace dokončena přechází automat do stavu \textit{S\_DATA\_SHIFT} a data jsou odeslána zpět prostřednictvím \texttt{\acs{TDO}} pinu. Po přenosu požadovaných dat přechází automat do stavu \textit{S\_OP} a debugger může pokračovat v komunikaci nebo komunikaci ukončit přechodem ze stavu \textit{Shift-DR} řídicího stavového automatu.
 
@@ -164,7 +165,7 @@ Pro čtení ze systémové sběrnice je třeba po přijetí adresy čteného reg
   \begin{center}
     \includegraphics[scale=0.19]{obrazky/dyn_fsm_simple.pdf}
   \end{center}
-  \caption{Stavový diagram popisující část hlavního stavového automatu pro dynamic-wait režim.}
+  \caption{Stavový diagram části stavového automatu pro dynamic-wait mód.}
 	\label{fig:dyn_wait_fsm}
 \end{figure}
 
@@ -175,7 +176,7 @@ Diagram části stavového automatu pro změnu používané varianty protokolu j
   \begin{center}
     \includegraphics[scale=0.3]{obrazky/cmd_fsm_simple.pdf}
   \end{center}
-  \caption{Stavový diagram popisující část hlavního stavového automatu pro změnu módu}
+  \caption{Stavový diagram části stavového automatu pro změnu módu}
 	\label{fig:cmd_fsm}
 \end{figure}
 
