--- a/text/jtag_ap.tex
+++ b/text/jtag_ap.tex
@@ -136,7 +136,9 @@ Modul pro komunikaci pomocí navrženého protokolu je rozdělen na dvě části
 
 Část obvodu pro zpracování optimalizovaného protokolu je realizována implementací stavového automatu, který je taktován na nástupnou hranu \texttt{\acs{TCK}}. Tento stavový automat je rozdělený na tři části, pro zpracování varianty protokolu \textbf{Busy-wait}, \textbf{Dynamic-wait} a také pro změnu varianty. Všechny tyto části stavového automatu mají společné stavy \textit{S\_IDLE} a \textit{S\_OP} (operace). Přechody ze stavu \textit{S\_OP} rozdělují stavový automat podle vybrané varianty protokolu a také podle přijaté hodnoty \textit{op} definované tabulkou \ref{tab:op_vals}. Rozdělení stavového automatu v rámci stavu \textit{S\_OP} vyplývá z potřeby vyhodnocení hodnoty \textit{op} = 7 uvozující změnu varianty protokolu. Přechod mezi stavy \textit{S\_IDLE} a \textit{S\_OP} nastane vždy při přechodu řídicího stavového automatu do stavu \textit{Shift-DR} a zároveň za předpokladu, že je instrukce nastavena na hodnotu \texttt{0x02}.
 
-Tento způsob implementace stavového automatu byl vybrán jako kompromis mezi variantou samostatných stavových automatů pro jednotlivé varianty protokolu a mezi jedním sdíleným stavovým automatem pro obě varianty. Pokud by bylo zvoleno řešení se samostatnými stavovými automaty, byly by stavy ve kterých nejsou přenášena data zbytečně duplikovány (například stav \textit{S\_IDLE}). Toto řešení by také zbytečně navyšovalo počet klopných obvodů potřebný pro definování stavů. V případě sloučení všech stavů pro oba protokoly, by byla kombinační logika stavového automatu výrazně složitější a pravděpodobně i celkově obsáhlejší. Toto řešení by mělo za následek výrazně náročnější implementaci případných změn či vylepšení (například přidání dalšího protokolu). 
+Tento způsob implementace stavového automatu byl vybrán jako kompromis mezi variantou samostatných stavových automatů pro jednotlivé varianty protokolu a mezi jedním sdíleným stavovým automatem pro obě varianty. Pokud by bylo zvoleno řešení se samostatnými stavovými automaty, byly by stavy ve kterých nejsou přenášena data zbytečně duplikovány (například stav \textit{S\_IDLE}). Toto řešení by také zbytečně navyšovalo počet klopných obvodů potřebný pro definování stavů. V případě sloučení všech stavů pro oba protokoly, by byla kombinační logika stavového automatu výrazně složitější a pravděpodobně i celkově obsáhlejší. Toto řešení by mělo za následek výrazně náročnější implementaci případných změn či vylepšení (například přidání dalšího protokolu).
+
+Stavové diagramy jednotlivých částí automatu jsou zobrazeny na obrázcích \ref{fig:busy_wait_fsm}, \ref{fig:dyn_wait_fsm} a \ref{fig:cmd_fsm}, přičemž v diagramech jsou zobrazeny pouze některé výstupy pro jejich zjednodušení.
 
 \subsection{Varianta protokolu Busy-wait - stavový automat} \label{subsec:busy-wait-fsm}
 Princip fungování části stavového automatu pro komunikaci pomocí \textbf{Busy-wait} varianty protokolu je znázorněn stavovým diagramem na obrázku \ref{fig:busy_wait_fsm}. Pokud je zvolena varianta protokolu \textbf{Busy-wait}, přechází automat ze stavu \textit{S\_OP} na základě přijaté hodnoty \textit{op} do stavu \textit{S\_ADDR\_SHIFT} nebo \textit{S\_DATA\_SHIFT}.
