vytvoreni souboru pro kopitolu o SW

--- a/sablona-prace.tex
+++ b/sablona-prace.tex
@@ -218,6 +218,9 @@
 %Vlozeni souboru s třetí kapitolou (Advanced protocol)
 \include{text/jtag_ap}
 
+%Vlozeni souboru se čtvrtou kapitolou (Software)
+\include{text/sw}
+
 %%% Vložení souboru 'text/cile.tex' s úvodem
 %\include{text/cile}
 
