blokove schema spojeni PC-FPGA

--- a/text/jtag_2w.tex
+++ b/text/jtag_2w.tex
@@ -1,4 +1,4 @@
-\chapter{Rozbor modulu pro dvouvodičový \acs{JTAG} protokol}
+\chapter{Rozbor modulu pro dvouvodičový \acs{JTAG} protokol}	\label{jtag_2w}
 %\chapter{Návrh a implementace modulu pro dvouvodičový \acs{JTAG} protokol}
 Tato kapitola se zaměřuje na princip fungování dvouvodičového \acs{JTAG} rozhraní s možností přepnutí na původní čtyřvodičovou variantu a zpět. Popsána je zde také aktivační sekvence pro výběr jedné z těchto dvou variant komunikace, definovaná standardem IEEE 1149.7. V této kapitole je také uveden způsob implementace modulu pro zpracování aktivační sekvence a převod vstupního dvouvodičového \acs{JTAG} rozhraní na původní čtyřvodičové. %, pokud je zvolena dvouvodičová varianta.
 	
