--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -23,6 +23,24 @@ IEEE Standard for Reduced-Pin and Enhanced-Functionality Test Access Port and Bo
 \bibitem{JTAG_TAP_diagram}
 \textit{Joint Test Action Group}. Online. In: Wikipedia: the free encyclopedia. San Francisco (CA): Wikimedia Foundation, 2001-. Dostupné z: \url{https://de.m.wikipedia.org/wiki/Joint\_Test\_Action\_Group}. [cit. 2023-10-31].
 
+\bibitem{FTDI4232H}
+FUTURE TECHNOLOGY DEVICES INTERNATIONAL LIMITED [FTDI]. \textit{FT4232H Datasheet}. Online. 2019. Dostupné z: \url{https://ftdichip.com/wp-content/uploads/2020/08/DS\_FT4232H.pdf}. [cit. 2024-02-26].
+
+\bibitem{MPSSE_basic}
+FUTURE TECHNOLOGY DEVICES INTERNATIONAL LIMITED [FTDI]. \textit{FTDI MPSSE Basics}. Online. 2010. Dostupné z: \url{https://www.ftdichip.com/Documents/AppNotes/AN\_135\_MPSSE\_Basics.pdf}. [cit. 2024-02-26].
+
+\bibitem{MPSSE_cmd}
+FUTURE TECHNOLOGY DEVICES INTERNATIONAL LIMITED [FTDI]. \textit{Command Processor for MPSSE and MCU Host Bus Emulation Modes}. Online. 2011. Dostupné z: \url{https://www.ftdichip.com/Documents/AppNotes/AN\_108\_Command\_Processor\_for\_MPSSE\_and\_MCU\_Host\_Bus\_Emulation\_Modes.pdf}. [cit. 2024-02-26].
+
+\bibitem{HS2}
+DIGILENT. \textit{JTAG-HS2 Programming Cable}. Online. 2015. Dostupné z: \url{https://digilent.com/reference/\_media/jtag\_hs2:jtag-hs2\_rm.pdf}. [cit. 2024-03-03].
+
+\bibitem{TE0725_TRM}
+TRENZ ELECTRONIC GMBH. \textit{TE0725 TRM}. Online. 2018. Dostupné z: \url{https://shop.trenz-electronic.de/trenzdownloads/Trenz\_Electronic/Modules\_and\_Module\_Carriers/3.5x7.3/TE0725/REV03/Documents/TRM-TE0725-03.pdf}. [cit. 2024-03-05].
+
+\bibitem{TE0725_sch}
+TRENZ ELECTRONIC GMBH. \textit{TE0725 schematic}. Online. 2016. Dostupné z: \url{https://shop.trenz-electronic.de/trenzdownloads/Trenz\_Electronic/Modules\_and\_Module\_Carriers/3.5x7.3/TE0725/REV03/Documents/SCH-TE0725-03-100-2C.PDF}. [cit. 2024-03-05].
+
 \end{thebibliography}
 
 
