--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -52,5 +52,7 @@
 	\acro{RISC}
 		{Reduced Instruction Set Computer}
 	\acro{PULP}
-		{Parallel Ultra Low Power}	
+		{Parallel Ultra Low Power}
+	\acro{MPSSE}
+		{Multi-Purpose Synchronous Serial Engine}
 \end{acronym}
